--- a/index.html
+++ b/index.html
@@ -13,328 +13,30 @@
 </head>
 
 
-<body onload="create_unfinished_task(), create_finished_task()">
+<body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-
-  <!--<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>-->
-
-  <!--<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>-->
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
+<!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script>
-    var firebaseConfig = {
-      apiKey: "AIzaSyASvw80DuelGaKx3v3NoK4eo13tT_C1Q7U",
-      authDomain: "dpprojekt-3d1fd.firebaseapp.com",
-      databaseURL: "https://dpprojekt-3d1fd.firebaseio.com",
-      projectId: "dpprojekt-3d1fd",
-      storageBucket: "dpprojekt-3d1fd.appspot.com",
-      messagingSenderId: "455950445352",
-      appId: "1:455950445352:web:c551266cc5d56e5ecd7e1d",
-      measurementId: "G-91EEZ5MBPF"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-
-    function add_task() {
-      input_box = document.getElementById("input_box");
-      input_date = document.getElementById("input_date");
-      input_desc=document.getElementById("input_desc");
-      input_type=document.getElementById("input_type")
-      if (input_box.value.length != 0 && input_date.value.length != 0) {
-        // our boxes have data and we take database
-        var key = firebase.database().ref().child("unfinished_task").push().key;
-        var task = {
-          title: input_box.value,
-          date: input_date.value,
-          desc:input_desc.value,
-          type:input_type.value,
-          key: key
-        };
-
-        var updates = {};
-        updates["/unfinished_task/" + key] = task;
-        firebase.database().ref().update(updates);
-        create_unfinished_task();
-      }
-    }
-
-
-    function create_unfinished_task() {
-      unfinished_task_container = document.getElementsByClassName("container")[0];
-      unfinished_task_container.innerHTML = "";
-      task_array = [];
-      firebase.database().ref("unfinished_task").once('value', function (snapshot) {
-        snapshot.forEach(function (childSnapshot) {
-          var childKey = childSnapshot.key;
-          var childData = childSnapshot.val();
-          task_array.push(Object.values(childData));
-        });
-
-        for (var i, i = 0; i < task_array.length; i++) {
-          task_date = task_array[i][0];
-          task_desc = task_array[i][1];
-          task_key = task_array[i][2];
-          task_title=task_array[i][3];
-          task_type=task_array[i][4];
-
-          task_container = document.createElement("div");
-          task_container.setAttribute("class", "task_container");
-          task_container.setAttribute("data-key", task_key);
-
-          // TASK DATA
-          task_data = document.createElement('div');
-          task_data.setAttribute('id', 'task_data');
-
-          title = document.createElement('p');
-          title.setAttribute('id', 'task_title');
-          title.setAttribute('contenteditable', false);
-          title.innerHTML = task_title;
-
-          desc=document.createElement('p');
-          desc.setAttribute('id','task_title');
-          desc.setAttribute('contenteditable',false);
-          desc.innerHTML=task_desc;
-
-          date = document.createElement('p');
-          date.setAttribute('id', 'task_date');
-          date.setAttribute('contenteditable', false);
-          date.innerHTML = task_date;
-
-          type = document.createElement('p');
-          type.setAttribute('id', 'task_date');
-          type.setAttribute('contenteditable', false);
-          type.innerHTML = task_type;
-
-          // TASK TOOLS
-          task_tool = document.createElement('div');
-          task_tool.setAttribute('id', 'task_tool');
-
-          task_done_button = document.createElement('button');
-          task_done_button.setAttribute('id', 'task_done_button');
-          task_done_button.setAttribute('onclick', "task_done(this.parentElement.parentElement, this.parentElement)");
-
-          fa_done = document.createElement('i');
-          fa_done.setAttribute('class', 'fa fa-check');
-
-          task_edit_button = document.createElement('button');
-          task_edit_button.setAttribute('id', 'task_edit_button');
-          task_edit_button.setAttribute('onclick', "task_edit(this.parentElement.parentElement, this)");
-
-          fa_edit = document.createElement('i');
-          fa_edit.setAttribute('class', 'fa fa-pencil');
-
-          task_delete_button = document.createElement('button');
-          task_delete_button.setAttribute('id', 'task_delete_button');
-          task_delete_button.setAttribute('onclick', "task_delete(this.parentElement.parentElement)");
-
-          fa_delete = document.createElement('i');
-          fa_delete.setAttribute('class', 'fa fa-trash');
-
-          unfinished_task_container.append(task_container);
-          task_container.append(task_data);
-          task_data.append(title);
-          task_data.append(desc);
-          task_data.append(date);
-          task_data.append(type);
-
-          task_container.append(task_tool);
-          task_tool.append(task_done_button);
-          task_done_button.append(fa_done);
-          task_tool.append(task_edit_button);
-          task_edit_button.append(fa_edit);
-          task_tool.append(task_delete_button);
-          task_delete_button.append(fa_delete);
-        }
-      });
-    }
-
-    function create_finished_task() {
-
-      finished_task_container = document.getElementsByClassName("container")[1];
-      finished_task_container.innerHTML = "";
-
-      finished_task_array = [];
-
-      firebase.database().ref("finished_task").once('value', function (snapshot) {
-        snapshot.forEach(function (childSnapshot) {
-          var childKey = childSnapshot.key;
-          var childData = childSnapshot.val();
-          finished_task_array.push(Object.values(childData));
-        });
-
-        for (var i, i = 0; i < finished_task_array.length; i++) {
-          task_date = finished_task_array[i][0];
-          task_desc = finished_task_array[i][1];
-          task_key = finished_task_array[i][2];
-          task_title = finished_task_array[i][3];
-          task_type = finished_task_array[i][4];
-
-
-          task_container = document.createElement("div");
-          task_container.setAttribute("class", "task_container");
-          task_container.setAttribute("data-key", task_key);
-
-          // TASK DATA
-          task_data = document.createElement('div');
-          task_data.setAttribute('id', 'task_data');
-
-          title = document.createElement('p');
-          title.setAttribute('id', 'task_title');
-          title.setAttribute('contenteditable', false);
-          title.innerHTML = task_title;
-
-          desc=document.createElement('p');
-          desc.setAttribute('id','task_title');
-          desc.setAttribute('contenteditable',false);
-          desc.innerHTML=task_desc;
-
-          date = document.createElement('p');
-          date.setAttribute('id', 'task_date');
-          date.setAttribute('contenteditable', false);
-          date.innerHTML = task_date;
-
-          type = document.createElement('p');
-          type.setAttribute('id', 'task_date');
-          type.setAttribute('contenteditable', false);
-          type.innerHTML = task_type;
-          
-          // TASK TOOLS
-          task_tool = document.createElement('div');
-          task_tool.setAttribute('id', 'task_tool');
-
-          task_delete_button = document.createElement('button');
-          task_delete_button.setAttribute('id', 'task_delete_button');
-          task_delete_button.setAttribute('onclick', "task_finished_delete(this.parentElement.parentElement)");
-          fa_delete = document.createElement('i');
-          fa_delete.setAttribute('class', 'fa fa-trash');
-
-          finished_task_container.append(task_container);
-          task_container.append(task_data);
-          task_data.append(title);
-          task_data.append(desc);
-          task_data.append(date);
-          task_data.append(type);
-
-          task_container.append(task_tool);
-          task_tool.append(task_delete_button);
-          task_delete_button.append(fa_delete);
-        }
-      });
-    }
-
-    function task_done(task, task_tool) {
-      finished_task_container = document.getElementsByClassName("container")[1];
-      task.removeChild(task_tool);
-      finished_task_container.append(task);
-
-      var key = task.getAttribute("data-key");
-      var task_obj = {
-        title: task.childNodes[0].childNodes[0].innerHTML,
-        desc: task.childNodes[0].childNodes[1].innerHTML,
-        date: task.childNodes[0].childNodes[2].innerHTML,
-        type: task.childNodes[0].childNodes[3].innerHTML,
-        key: key
-      };
-
-      var updates = {};
-      updates["/finished_task/" + key] = task_obj;
-      firebase.database().ref().update(updates);
-
-      // delete our task from unfinished
-      task_delete(task);
-      create_finished_task();
-    }
-
-
-    function task_edit(task, edit_button) {
-      edit_button.setAttribute("id", "task_edit_button_editing");
-      edit_button.setAttribute("onclick", "finish_edit(this.parentElement.parentElement, this)");
-
-      title = task.childNodes[0].childNodes[0];
-      title.setAttribute("contenteditable", true);
-      title.setAttribute("id", "title_editing");
-      title.focus();
-
-      desc = task.childNodes[0].childNodes[1];
-      desc.setAttribute("contenteditable", true);
-      desc.setAttribute("id", "title_editing");
-      desc.focus();
-
-      date = task.childNodes[0].childNodes[2];
-      date.setAttribute("contenteditable", true);
-      date.setAttribute("id", "date_editing");
-
-      type = task.childNodes[0].childNodes[2];
-      type.setAttribute("contenteditable", true);
-      type.setAttribute("id", "title_editing");
-    }
-
-    function finish_edit(task, edit_button) {
-      edit_button.setAttribute("id", "task_edit_button");
-      edit_button.setAttribute("onclick", "task_edit(this.parentElement.parentElement, this)");
-
-      title = task.childNodes[0].childNodes[0];
-      title.setAttribute("contenteditable", true);
-      title.setAttribute("id", "title_editing");
-      title.focus();
-
-      desc = task.childNodes[0].childNodes[1];
-      desc.setAttribute("contenteditable", true);
-      desc.setAttribute("id", "title_editing");
-      desc.focus();
-
-      date = task.childNodes[0].childNodes[2];
-      date.setAttribute("contenteditable", true);
-      date.setAttribute("id", "date_editing");
-
-      type = task.childNodes[0].childNodes[2];
-      type.setAttribute("contenteditable", true);
-      type.setAttribute("id", "title_editing");
-      
-      // change in firebase to
-      var key = task.getAttribute("data-key");
-      var task_obj = {
-        title: task.childNodes[0].childNodes[0].innerHTML,
-        desc: task.childNodes[0].childNodes[1].innerHTML,
-        date: task.childNodes[0].childNodes[2].innerHTML,
-        type: task.childNodes[0].childNodes[3].innerHTML,
-        key: key
-      };
-
-      var updates = {};
-      updates["/unfinished_task/" + key] = task_obj;
-      firebase.database().ref().update(updates);
-    }
-
-
-    function task_delete(task) {
-      key = task.getAttribute("data-key");
-      task_to_remove = firebase.database().ref("unfinished_task/" + key);
-      task_to_remove.remove();
-      // remove from html view or whatevesss
-      task.remove();
-    }
-
-
-    function task_finished_delete(task) {
-      key = task.getAttribute("data-key");
-      task_to_remove = firebase.database().ref("finished_task/" + key);
-      task_to_remove.remove();
-      // remove from html view or whatevesss
-      task.remove();
-    }
-  </script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDdPAxLSTnzXfTSczPWapTQYCig0G_qpBE",
+    authDomain: "pboard-81d62.firebaseapp.com",
+    databaseURL: "https://pboard-81d62.firebaseio.com",
+    projectId: "pboard-81d62",
+    storageBucket: "pboard-81d62.appspot.com",
+    messagingSenderId: "810706049492",
+    appId: "1:810706049492:web:5592f3b34a6c409c84de41",
+    measurementId: "G-WHN1FGQ33T"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 <nav class="navigation-bar">
   <div class="logo">
       <h1>Projekt Board</h1>
@@ -368,7 +70,10 @@
         <i class="fa fa-pencil" aria-hidden="true"></i>
     </div>
     <p class="header"> TASKS TO DO </p></div>
-    <div class="container">
+    <div class="container-1">
+      <ul>
+          <li>hey</li>
+      </ul>
     </div>
   </div>
 
@@ -379,28 +84,14 @@
         <i class="fa fa-pencil" aria-hidden="true"></i>
     </div>
     <p class="header"> ACCOMPLISHED </p></div>
-    <div class="container">
-      <div class="task_container">
-        <div id="task_data">
-          <p id="task_title" contenteditable="false"> Task Title 1 </p>
-          <p id="task_date" contenteditable="false"> Task Date 1 </p>
-        </div>
-      </div>
-      <div class="task_container">
-        <div id="task_data">
-          <p id="task_title" contenteditable="false"> Task Title 1 </p>
-          <p id="task_date" contenteditable="false"> Task Date 1 </p>
-        </div>
-      </div>
+      <div class="container-2">
+          <ul>
 
-      <div class="task_container">
-        <div id="task_data">
-          <p id="task_title" contenteditable="false"> Task Title 1 </p>
-          <p id="task_date" contenteditable="false"> Task Date 1 </p>
-        </div>
+          </ul>
       </div>
-    </div>
   </div>
-  </div>
+</div>
+
+<script src="finish_task.js"></script>
 </body>
 </html>
